@@ -115,7 +115,7 @@ public class AvailableCommandsPacket17 extends Packet17 {
         enumValues.addAll(commandNames);
 
         List<String> enumIndexes = new ArrayList<>(enumValues);
-        List<String> enumDataIndexes = enums.stream().map(CommandEnum::getName).collect(Collectors.toList());
+        List<String> enumDataIndexes = enums.stream().map(CommandEnum::getName).toList();
         List<String> fixesIndexes = new ArrayList<>(postFixes);
         List<CommandEnum> softEnums = new ArrayList<>(softEnumsSet);
 
